# douyin-downloader-app

./: .gitignore  AGENTS.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.beads/: config.yaml  issues.jsonl
.khuym/: onboarding.json  state.json
.khuym/findings/: learnings-candidates.md
history/learnings/: 20260508-desktop-queue-proof.md  20260509-desktop-runtime-contracts.md  critical-patterns.md
history/windows-desktop-downloader-ui/: CONTEXT.md  approach.md  discovery.md  phase-1-contract.md  phase-1-story-map.md  phase-1-uat.md  phase-2-contract.md  phase-2-story-map.md  phase-2-uat.md  phase-3-contract.md  phase-3-security-accepted-risks.md  phase-3-story-map.md  phase-3-uat.md  phase-plan.md  state-final.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backend.rs  main.rs
src/app/: App.tsx
src/components/: AdvancedOptionsPanel.tsx  BackendStatusCard.tsx  BatchDownloadPanel.tsx  BatchStatusPanel.tsx  DiagnosticsPanel.tsx  HistoryPanel.tsx  JobStatusPanel.tsx  JobStatusPlaceholder.tsx  LogsPanel.tsx  OutputFolderControl.tsx  QueueTable.tsx  SingleDownloadPanel.tsx
src/services/: backendClient.ts  backendLifecycle.ts  batchImportAdapter.ts  batchQueue.ts  batchQueueRunner.ts  cookieRecovery.ts  errorMapper.ts  historyStore.ts  jobPolling.ts  logStore.ts  settingsStore.ts  tauriBackendRuntime.ts
src/styles/: app.css
src/tests/: app-shell.test.tsx  backend-client.test.ts  backend-lifecycle.test.ts  batch-import-adapter.test.ts  batch-queue-runner.test.ts  batch-queue.test.ts  cookie-recovery.test.ts  (+7 more)
(+46 files in other folders)
